fix: Project launch

--- a/packages/dashboard/src/locales/de.json
+++ b/packages/dashboard/src/locales/de.json
@@ -418,7 +418,7 @@
         "widgetAppearance": "Anmeldemethoden und Widget-Einstellungen",
         "localization": "Lokalisierung",
         "accessSettings": "Zugriffseinstellungen",
-        "requiredFields": "Pflichtfelder",
+        "requiredFields": "Pflichtfelder"
       },
       "trusted": {
         "localAutoMergeUsers": {
