--- a/packages/dashboard/src/locales/ru.json
+++ b/packages/dashboard/src/locales/ru.json
@@ -418,7 +418,7 @@
         "widgetAppearance": "Способы входа и настройки виджета",
         "localization": "Локализация",
         "accessSettings": "Настройки доступа",
-        "requiredFields": "Обязательные поля",
+        "requiredFields": "Обязательные поля"
       },
       "trusted": {
         "localAutoMergeUsers": {
